[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Olauer.gd" type="Script" id=1]
[ext_resource path="res://assets/Olauer.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.93213, 7.95296 )

[node name="Olauer" type="KinematicBody2D"]
z_index = 1
z_as_relative = false
collision_layer = 34
collision_mask = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="RayNorth" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -8 )
collision_mask = 3

[node name="RaySouth" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 3

[node name="RayEast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 4, 0 )
collision_mask = 3

[node name="RayWest" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -4, 0 )
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.17

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "idle"
frame = 1
playing = true

[node name="Rays" type="Node2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.171745, 0.0686977 )
scale = Vector2( 0.405764, 0.800776 )

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
